--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <script>
   // UPDATE THIS PATH to your DOCX file
-  const docxPath = "docs/WeeklyBulletin.docx";
+  const docxPath = "WeeklyBulletin.docx";
 
   fetch(docxPath)
     .then(response => {
